[FIX] point_of_sale: Scrollbar on receipt print
A scrollbar appeared every time a receipt was printed. To fix this,
we put a height of 0 to the div that contains the receipt.

html2canvas then had trouble computing the height of the background.
There's a `height` option that can be given to the library but if the
logo on the receipt was not loaded yet, the size we computed was wrong.
We then compute the height only once the images have been loaded, in
the `onparsed` method.

We also remove a CSS class that wasn't used anymore.

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1544,9 +1544,6 @@ td {
         font-size: 13px !important;
         width: 266px !important;
     }
-    .pos .pos-receipts{
-        display: none !important;
-    }
     .o_debug_manager {
         display: none !important;
     }
